Format code during build itself + fix build